# cStuff

./: README.md
basicTCP/: CMakeLists.txt  client.c  server.c
